    use gzip instead of bzip2 since latter is sometimes missing on
    some platforms.

    joverc handling (commands.*, vars.*, keys.txt) Backed
    out of bsearch that I tried in 35dc21ae 4.17.3.2 since
    it does not provide the first-unambiguous-match
    behaviour.  But now generate cmdidx and varidx in
    setmaps for a little less code in Jove.

Author: Mark Moraes <moraes@computer.org>
Date:   Sun Dec 18 02:52:09 2022 -0500

   4.17.4.9 screen.c remove vestigial unused variable 'col'
   (causes complaints on FreeBSD 13.1)

Author: Mark Moraes <moraes@computer.org>
Date:   Sun Dec 11 16:27:21 2022 -0500

   4.17.4.8 jmake.sh: pass CC through, accept JMAKE_UNAME
   as override for uname. only use CC=gcc for Linux
   reverted a bit of da9018786dcb2e4a30f3f63ecd5081fc710d50e1
   to use SYSDEFS instead of CPPFLAGS, because FreeBSD does not have the
   latter as part of .c.o, sigh.  So we're back to SYSDEFS for -D or -I
   and OPTFLAGS for -O or other oddball compiler flags.
   default to gcc-style optflags, only change that for SunOS or unknown.

   testbuild.sh --preinstallonly or --sudo-preinstallonly
   exits after prereq package install without building, useful for
   updating containers. make rpm more robust for old containers
   that may have an previously installed jove, use TB_MACH instead
   of hardwired x86_64

Author: Mark Moraes <moraes@computer.org>
Date:   Fri Dec 4 20:20:45 2022 -0500

   4.17.4.7 recover.c: changed copystr to copystrs in to
   avoid sprintf to fixed size buffer that generated
   many complaints.
   setbuf on pipe seems unnecessary on modern machines/libc.
   missing space in error message

   testbuild.sh: for apt case, use OPTFLAGS from Cord debian hardening

Author: Mark Moraes <moraes@computer.org>
Date:   Fri Jul 8 03:39:05 2022 -0400

    4.17.4.6 ifdef jove-{compiled,linked}-with variables for
    UNIX or MINGW in vars.tab, to match jove.h (the variables
    get defined by lines appended by the Unix Makefile to keys.c)
