@@ -15,16 +15,22 @@ teachjove \- learn how to use the JOVE editor
 ]
 .SH DESCRIPTION
 .hy 0
-TEACHJOVE is a simple program that calls up the JOVE editor on a special
-file that is an interactive tutorial for the JOVE editor.  Once in JOVE
-all you do is follow the instructions and by doing so you will learn all
-about JOVE!  NOTE: TEACHJOVE actually makes a copy of the tutorial in
-your home directory; if you ever want to start over (if you trash the
-file by accident) all you need to do is remove the file
+TEACHJOVE (or TEACHJOV on MSDOS) is a simple program that
+calls up the JOVE editor with the -T option to load an
+interactive tutorial for the JOVE editor.  Once in JOVE all
+you do is follow the instructions and by doing so you will
+learn all about JOVE!  NOTE: If you use the
+.I save-file
+command (or the the keystrokes Control-X Control-S ),
+TEACHJOVE saves a copy
+of the tutorial in your home directory; if you ever want to
+start over (if you save a trashed file by accident) all you need
+to do is remove the file
 .I ~/teach-jove
 and run teachjove again.
 .LP
-TEACHJOVE recognizes the following switch:
+TEACHJOVE passes switches to Jove, though some may not
+be meaningful for the tutorial.  One that may be useful:
 .TP
 .BI \-s \ sharedir
 Allows the user to specify the directory in which the special
