@@ -1,3 +1,3 @@
-    ====================== JOVE Beginners-Menu ======================
-    Save and Exit (C-X s C-X C-C)    Exit without Saving (C-X C-C)
-    Save (C-X S)		     Get rid of this by 'touch ~/.joverc'
+Jove Tutorial (ESC X teach-jove)  C-X means press Control and X together
+Save (C-X s)  Exit (C-X C-C)   Exit without Saving (C-X C-C)
+Describe Command (ESC ?)  Describe key (C-X ?)  Hide this with 'touch ~/.joverc'
