@@ -1,0 +1,4 @@
+#!/bin/sh
+# teachjove used to be a binary, but now is just a script that 
+# invokes Jove with the -T option (triggering the teach-jove command)
+exec jove "$@" -T
